ops-bedrock/blockscout-l1.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blockscout-l1-svc
  name: blockscout-l1-svc
spec:
  type: ClusterIP
  ports:
    - name: "blockscout-port"
      port: 4000
      targetPort: 4000
  selector:
    app: blockscout-l1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blockscout-l1
  name: blockscout-l1
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: blockscout-l1
  template:
    metadata:
      labels:
        app: blockscout-l1
    spec:
      containers:
        - image: blockscout/blockscout:latest
          imagePullPolicy: Always
          name: blockscout
          command:
            - 'bash'
            - '-c'
          args:
            - 'bin/blockscout eval "Elixir.Explorer.ReleaseTasks.create_and_migrate()" && bin/blockscout start'
          ports:
            - containerPort: 4000
              protocol: TCP
        - image: ghcr.io/blockscout/visualizer:latest
          imagePullPolicy: Always
          name: visualizer
          ports:
            - containerPort: 8050
              protocol: TCP
        - image: ghcr.io/blockscout/smart-contract-verifier:latest
          imagePullPolicy: Always
          name: smart-contract-verifier
          ports:
            - containerPort: 8043
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
