ops-bedrock/op-batcher.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: op-batcher-svc
  name: op-batcher-svc
spec:
  type: ClusterIP
  ports:
    - name: "pprof-port"
      port: 6061
      targetPort: 6060
    - name: "metrics-port"
      port: 7301
      targetPort: 7300
  selector:
    app: op-batcher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: op-batcher
  name: op-batcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-batcher
  strategy: {}
  template:
    metadata:
      labels:
        app: op-batcher
    spec:
      containers:
        - env:
            - name: OP_BATCHER_CHANNEL_TIMEOUT
              value: "40"
            - name: OP_BATCHER_L1_ETH_RPC
              value: http://l1-svc:8545
            - name: OP_BATCHER_L2_ETH_RPC
              value: http://l2-svc:9545
            - name: OP_BATCHER_LOG_TERMINAL
              value: "true"
            - name: OP_BATCHER_MAX_L1_TX_SIZE_BYTES
              value: "120000"
            - name: OP_BATCHER_METRICS_ENABLED
              value: "true"
            - name: OP_BATCHER_MIN_L1_TX_SIZE_BYTES
              value: "1"
            - name: OP_BATCHER_MNEMONIC
              value: test test test test test test test test test test test junk
            - name: OP_BATCHER_NUM_CONFIRMATIONS
              value: "1"
            - name: OP_BATCHER_POLL_INTERVAL
              value: 1s
            - name: OP_BATCHER_PPROF_ENABLED
              value: "true"
            - name: OP_BATCHER_RESUBMISSION_TIMEOUT
              value: 30s
            - name: OP_BATCHER_ROLLUP_RPC
              value: http://op-node-svc:7545
            - name: OP_BATCHER_SAFE_ABORT_NONCE_TOO_LOW_COUNT
              value: "3"
            - name: OP_BATCHER_SEQUENCER_BATCH_INBOX_ADDRESS
              value: "0xff00000000000000000000000000000000000000"
            - name: OP_BATCHER_SEQUENCER_HD_PATH
              value: m/44'/60'/0'/0/2
          image: ops-bedrock_op-batcher
          imagePullPolicy: Never
          name: op-batcher
          ports:
            - containerPort: 6060
            - containerPort: 7300
          resources: {}
      restartPolicy: Always
status: {}
