ops-bedrock/op-proposer.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: op-proposer-svc
  name: op-proposer-svc
spec:
  type: ClusterIP
  ports:
    - name: "pprof-port"
      port: 6062
      targetPort: 6060
    - name: "metrics-port"
      port: 7302
      targetPort: 7300
  selector:
    app: op-proposer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: op-proposer
  name: op-proposer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-proposer
  strategy: {}
  template:
    metadata:
      labels:
        app: op-proposer
    spec:
      containers:
        - env:
            - name: OP_PROPOSER_ALLOW_NON_FINALIZED
              value: "true"
            - name: OP_PROPOSER_L1_ETH_RPC
              value: http://l1-svc:8545
            - name: OP_PROPOSER_L2OO_ADDRESS
              value: "0x6900000000000000000000000000000000000000"
            - name: OP_PROPOSER_L2_OUTPUT_HD_PATH
              value: m/44'/60'/0'/0/1
            - name: OP_PROPOSER_LOG_TERMINAL
              value: "true"
            - name: OP_PROPOSER_METRICS_ENABLED
              value: "true"
            - name: OP_PROPOSER_MNEMONIC
              value: test test test test test test test test test test test junk
            - name: OP_PROPOSER_NUM_CONFIRMATIONS
              value: "1"
            - name: OP_PROPOSER_POLL_INTERVAL
              value: 1s
            - name: OP_PROPOSER_PPROF_ENABLED
              value: "true"
            - name: OP_PROPOSER_RESUBMISSION_TIMEOUT
              value: 30s
            - name: OP_PROPOSER_ROLLUP_RPC
              value: http://op-node-svc:7545
            - name: OP_PROPOSER_SAFE_ABORT_NONCE_TOO_LOW_COUNT
              value: "3"
          image: ops-bedrock_op-proposer
          imagePullPolicy: Never
          name: op-proposer
          ports:
            - containerPort: 6060
            - containerPort: 7300
          resources: {}
      restartPolicy: Always
status: {}
