ops-bedrock/stateviz.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stateviz
  name: stateviz
spec:
  type: LoadBalancer
  ports:
    - name: "9090"
      port: 9090
      targetPort: 8080
  selector:
    app: stateviz
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: stateviz
  name: stateviz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateviz
  template:
    metadata:
      labels:
        app: stateviz
    spec:
      containers:
        - args:
            - stateviz
            - -addr=0.0.0.0:8080
            - -snapshot=/op_log/snapshot.log
            - -refresh=10s
          image: stateviz
          imagePullPolicy: Never
          name: stateviz
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /op_log
              name: op-log
              readOnly: true
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: op-log
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
